<resources>
    <string name="app_name">ColorCompare</string>
    <string name="colortext_hint"><font size="20">Select or input a color</font></string>
    <string name="arrow_message">Touch the side you want to select</string>
    <string name="non_valid_color_input">Input is not a valid color</string>
    <string name="Remove_color_text">Remove \" </string>
    <string name="save">Save</string>
    <string name="get_from_playstore_failed">Fetching data from Play Store failed</string>
    <string name="standard_error">Error, please try again later</string>
    <string name="setup_failed">Setup failed, please try later</string>
    <string name="retrieve_data_failed">Failed to retrieve data, please try again later</string>
    <string name="purchase_canceled">Purchase canceled</string>
    <string name="thanks">Thank you!</string>
    <string name="saved_colors">Saved colors</string>
    <string name="rate_app">Rate app</string>
    <string name="premium">Premium</string>
    <string name="had_premium">Item already purchased, premium received</string>
    <string name="purchase_failed">Purchase failed, please try again later</string>
    <string name="need_premium_for_space">You need premium to save more than 8 colors</string>
    <string name="more">more</string>
    <string name="arrow_tooltip">Points at the selected side</string>
    <string name="crash_apoligy">Sorry for the inconvenience</string>
    <string name="no_saved_colors">No saved colors</string>
    <string name="color_name">Color name</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="update_color_to_selected">Update color to selected</string>
    <string name="delete_color">Delete color</string>
    <string name="leave_rating">Leave a public rating</string>
    <string name="contact_me_about_issues">Contact me about issues</string>
    <string name="purchase_pending">The purchase is pending</string>
    <string name="failed_query">Failed to query for purchases!</string>
    <string name="invalid_signature">The purchase signature is not valid!</string>
    <string name="failed_verification">Purchase verification failed</string>
    <string name="please_wait">Please wait a moment</string>
    <string name="settings">Settings</string>
    <string name="can_not_show_license">Error: can\'t show license</string>
    <string name="open_source_licenses">Open-source licenses</string>
    <string name="color_picker_library"><u>Color picker library</u></string>
    <string name="alpha_settings">Alpha Settings</string>
    <string name="color_picker">Color Picker</string>
    <string name="dark_mode">Dark mode</string>


    <string-array name="dark_mode_options">
        <item>Auto</item>
        <item>On</item>
        <item>Off</item>
    </string-array>
</resources>
